@@ -5,7 +5,7 @@ from .twoterm import (Resistor, ResistorIEEE, ResistorIEC, ResistorVar, Resistor
                       DiodeShockley, Zener, Varactor, LED, LED2, Photodiode, Potentiometer, PotentiometerIEEE,
                       PotentiometerIEC, Diac, Triac, SCR, Memristor, Memristor2, Josephson, Fuse, FuseUS, FuseIEEE,
                       FuseIEC, Inductor, Inductor2, Crystal, Breaker, CPE, SparkGap, RBox, RBoxVar,
-                      PotBox, PhotoresistorBox, Nullator, Norator)
+                      PotBox, PhotoresistorBox, Nullator, Norator, CurrentMirror, VoltageMirror)
 from .oneterm import Ground, GroundSignal, GroundChassis, Antenna, AntennaLoop, AntennaLoop2, Vss, Vdd, NoConnect
 from .opamp import Opamp
 from .sources import (Source, SourceV, SourceI, SourceSin, SourcePulse, SourceSquare, SourceTriangle, SourceRamp,
@@ -29,7 +29,7 @@ from .lines import (Line, DataBusLine, Dot, Arrowhead, Arrow, DotDotDot, Wire, G
 from .connectors import OrthoLines, RightLines, Header, Jumper, BusConnect, BusLine, DB25, DB9, CoaxConnect, Plug, Jack
 from .compound import ElementCompound, Optocoupler, Relay, Rectifier, Wheatstone
 from .twoports import (TwoportElement, TwoPort, VoltageTransactor, TransimpedanceTransactor, CurrentTransactor,
-                       TransadmittanceTransactor, Nullor)
+                       TransadmittanceTransactor, Nullor, VMCMPair)
 from .outlets import (OutletA, OutletB, OutletC, OutletD, OutletE, OutletF, OutletG, OutletH, OutletI, OutletJ,
                       OutletK, OutletL)
 
